--- a/FoodPiper/FilterView.xib
+++ b/FoodPiper/FilterView.xib
@@ -2,13 +2,14 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FilterViewController" customModule="FoodPiper" customModuleProvider="target">
             <connections>
                 <outlet property="categoryCollapsedView" destination="dPZ-7i-Cup" id="1QN-g4-cRr"/>
-                <outlet property="categoryHeightConstraint" destination="UEK-qh-o8h" id="LZe-1A-u34"/>
-                <outlet property="view" destination="iN0-l3-epB" id="sjT-PT-BId"/>
+                <outlet property="categoryHeightConstraint" destination="mrO-HE-29l" id="AzA-Ui-Fex"/>
+                <outlet property="view" destination="iN0-l3-epB" id="ksi-Az-Q0G"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -16,7 +17,7 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DCG-hh-8Cc">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tke-gv-reR">
                     <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dPZ-7i-Cup">
@@ -24,32 +25,29 @@
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7fA-wL-XwQ">
                                     <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="71" id="aJ6-FJ-Lfp"/>
+                                    </constraints>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <nil key="highlightedColor"/>
-                                </label>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kwm-by-sVI">
-                                    <rect key="frame" x="-23" y="-15" width="46" height="30"/>
-                                    <constraints>
-                                        <constraint firstAttribute="width" constant="30" id="2J8-nV-sOk"/>
-                                        <constraint firstAttribute="height" constant="30" id="R1Y-Sq-AjS"/>
-                                    </constraints>
-                                    <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
-                                    <state key="normal" title="&gt;">
-                                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    </state>
                                     <variation key="default">
                                         <mask key="constraints">
-                                            <exclude reference="2J8-nV-sOk"/>
-                                            <exclude reference="R1Y-Sq-AjS"/>
+                                            <exclude reference="aJ6-FJ-Lfp"/>
                                         </mask>
                                     </variation>
                                     <variation key="heightClass=regular-widthClass=compact">
                                         <mask key="constraints">
-                                            <include reference="2J8-nV-sOk"/>
-                                            <include reference="R1Y-Sq-AjS"/>
+                                            <include reference="aJ6-FJ-Lfp"/>
                                         </mask>
                                     </variation>
+                                </label>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kwm-by-sVI">
+                                    <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                    <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
+                                    <state key="normal" title="&gt;">
+                                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </state>
                                     <connections>
                                         <action selector="filterCategoryPressed:" destination="-1" eventType="touchUpInside" id="g0M-Ck-FUd"/>
                                     </connections>
@@ -57,14 +55,13 @@
                             </subviews>
                             <color key="backgroundColor" red="0.12549019610000001" green="0.53725490200000003" blue="0.63921568630000003" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
-                                <constraint firstItem="Kwm-by-sVI" firstAttribute="centerY" secondItem="7fA-wL-XwQ" secondAttribute="centerY" id="1ff-Mc-Aey"/>
-                                <constraint firstItem="7fA-wL-XwQ" firstAttribute="top" secondItem="dPZ-7i-Cup" secondAttribute="top" constant="15" id="FsF-4O-rG8"/>
-                                <constraint firstAttribute="width" constant="400" id="No0-G0-u0C"/>
-                                <constraint firstItem="7fA-wL-XwQ" firstAttribute="centerY" secondItem="dPZ-7i-Cup" secondAttribute="centerY" id="OiG-Xa-2KK"/>
-                                <constraint firstAttribute="trailing" secondItem="Kwm-by-sVI" secondAttribute="trailing" constant="16" id="Rja-ff-jRi"/>
-                                <constraint firstAttribute="height" constant="51" id="UEK-qh-o8h"/>
-                                <constraint firstItem="Kwm-by-sVI" firstAttribute="centerY" secondItem="dPZ-7i-Cup" secondAttribute="centerY" id="f8Z-I9-zqb"/>
-                                <constraint firstItem="7fA-wL-XwQ" firstAttribute="leading" secondItem="dPZ-7i-Cup" secondAttribute="leading" constant="8" id="gqL-zu-bWV"/>
+                                <constraint firstAttribute="trailing" secondItem="Kwm-by-sVI" secondAttribute="trailing" constant="16" id="1TV-mc-DnS"/>
+                                <constraint firstItem="Kwm-by-sVI" firstAttribute="centerY" secondItem="dPZ-7i-Cup" secondAttribute="centerY" id="AkD-WR-kgV"/>
+                                <constraint firstItem="Kwm-by-sVI" firstAttribute="top" secondItem="dPZ-7i-Cup" secondAttribute="top" constant="10" id="I4C-Ji-e4u"/>
+                                <constraint firstItem="7fA-wL-XwQ" firstAttribute="leading" secondItem="dPZ-7i-Cup" secondAttribute="leadingMargin" id="eRC-CL-jek"/>
+                                <constraint firstItem="Kwm-by-sVI" firstAttribute="centerY" secondItem="7fA-wL-XwQ" secondAttribute="centerY" id="iPP-k9-UmG"/>
+                                <constraint firstAttribute="height" constant="51" id="mrO-HE-29l"/>
+                                <constraint firstItem="7fA-wL-XwQ" firstAttribute="top" secondItem="dPZ-7i-Cup" secondAttribute="top" constant="15" id="tXD-ZY-322"/>
                             </constraints>
                             <variation key="default">
                                 <mask key="subviews">
@@ -72,14 +69,13 @@
                                     <exclude reference="Kwm-by-sVI"/>
                                 </mask>
                                 <mask key="constraints">
-                                    <exclude reference="No0-G0-u0C"/>
-                                    <exclude reference="UEK-qh-o8h"/>
-                                    <exclude reference="FsF-4O-rG8"/>
-                                    <exclude reference="OiG-Xa-2KK"/>
-                                    <exclude reference="gqL-zu-bWV"/>
-                                    <exclude reference="1ff-Mc-Aey"/>
-                                    <exclude reference="Rja-ff-jRi"/>
-                                    <exclude reference="f8Z-I9-zqb"/>
+                                    <exclude reference="mrO-HE-29l"/>
+                                    <exclude reference="eRC-CL-jek"/>
+                                    <exclude reference="tXD-ZY-322"/>
+                                    <exclude reference="1TV-mc-DnS"/>
+                                    <exclude reference="AkD-WR-kgV"/>
+                                    <exclude reference="I4C-Ji-e4u"/>
+                                    <exclude reference="iPP-k9-UmG"/>
                                 </mask>
                             </variation>
                             <variation key="heightClass=regular-widthClass=compact">
@@ -88,39 +84,35 @@
                                     <include reference="Kwm-by-sVI"/>
                                 </mask>
                                 <mask key="constraints">
-                                    <include reference="No0-G0-u0C"/>
-                                    <include reference="UEK-qh-o8h"/>
-                                    <include reference="FsF-4O-rG8"/>
-                                    <exclude reference="OiG-Xa-2KK"/>
-                                    <include reference="gqL-zu-bWV"/>
-                                    <include reference="1ff-Mc-Aey"/>
-                                    <include reference="Rja-ff-jRi"/>
-                                    <exclude reference="f8Z-I9-zqb"/>
+                                    <include reference="mrO-HE-29l"/>
+                                    <include reference="eRC-CL-jek"/>
+                                    <include reference="tXD-ZY-322"/>
+                                    <include reference="1TV-mc-DnS"/>
+                                    <exclude reference="AkD-WR-kgV"/>
+                                    <include reference="I4C-Ji-e4u"/>
+                                    <include reference="iPP-k9-UmG"/>
                                 </mask>
                             </variation>
                         </view>
                     </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstItem="dPZ-7i-Cup" firstAttribute="leading" secondItem="DCG-hh-8Cc" secondAttribute="leading" id="E0K-aY-RB1"/>
-                        <constraint firstAttribute="width" constant="400" id="Izt-vl-EDI"/>
-                        <constraint firstItem="dPZ-7i-Cup" firstAttribute="top" secondItem="DCG-hh-8Cc" secondAttribute="top" constant="42" id="OcA-pO-CMp"/>
-                        <constraint firstAttribute="trailing" secondItem="dPZ-7i-Cup" secondAttribute="trailing" id="OhQ-qW-EoX"/>
-                        <constraint firstAttribute="height" constant="361" id="cPv-eZ-hL7">
-                            <variation key="heightClass=regular-widthClass=compact" constant="800"/>
-                        </constraint>
-                        <constraint firstAttribute="height" constant="800" id="s4j-8v-Wya"/>
+                        <constraint firstAttribute="width" constant="400" id="20M-qS-qes"/>
+                        <constraint firstItem="dPZ-7i-Cup" firstAttribute="top" secondItem="Tke-gv-reR" secondAttribute="top" constant="28" id="C8v-uu-bLU"/>
+                        <constraint firstAttribute="trailing" secondItem="dPZ-7i-Cup" secondAttribute="trailing" id="J8w-ZV-oYa"/>
+                        <constraint firstAttribute="bottom" secondItem="dPZ-7i-Cup" secondAttribute="bottom" constant="20" id="hFf-HT-Chm"/>
+                        <constraint firstItem="dPZ-7i-Cup" firstAttribute="leading" secondItem="Tke-gv-reR" secondAttribute="leading" id="zsv-Es-GOt"/>
                     </constraints>
                     <variation key="default">
                         <mask key="subviews">
                             <exclude reference="dPZ-7i-Cup"/>
                         </mask>
                         <mask key="constraints">
-                            <exclude reference="Izt-vl-EDI"/>
-                            <exclude reference="cPv-eZ-hL7"/>
-                            <exclude reference="s4j-8v-Wya"/>
-                            <exclude reference="E0K-aY-RB1"/>
-                            <exclude reference="OcA-pO-CMp"/>
-                            <exclude reference="OhQ-qW-EoX"/>
+                            <exclude reference="20M-qS-qes"/>
+                            <exclude reference="C8v-uu-bLU"/>
+                            <exclude reference="J8w-ZV-oYa"/>
+                            <exclude reference="hFf-HT-Chm"/>
+                            <exclude reference="zsv-Es-GOt"/>
                         </mask>
                     </variation>
                     <variation key="heightClass=regular-widthClass=compact">
@@ -128,47 +120,46 @@
                             <include reference="dPZ-7i-Cup"/>
                         </mask>
                         <mask key="constraints">
-                            <include reference="Izt-vl-EDI"/>
-                            <exclude reference="cPv-eZ-hL7"/>
-                            <include reference="s4j-8v-Wya"/>
-                            <include reference="E0K-aY-RB1"/>
-                            <include reference="OcA-pO-CMp"/>
-                            <include reference="OhQ-qW-EoX"/>
+                            <include reference="20M-qS-qes"/>
+                            <include reference="C8v-uu-bLU"/>
+                            <include reference="J8w-ZV-oYa"/>
+                            <include reference="hFf-HT-Chm"/>
+                            <include reference="zsv-Es-GOt"/>
                         </mask>
                     </variation>
                 </view>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="0.72941176470000002" green="0.098039215690000001" blue="0.37647058820000001" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="DCG-hh-8Cc" secondAttribute="bottom" constant="439" id="NGe-k9-reY">
-                    <variation key="heightClass=regular-widthClass=compact" constant="0.0"/>
-                </constraint>
-                <constraint firstItem="DCG-hh-8Cc" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="aIx-ja-K8g"/>
-                <constraint firstItem="DCG-hh-8Cc" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="pDC-u7-nXr"/>
-                <constraint firstAttribute="trailing" secondItem="DCG-hh-8Cc" secondAttribute="trailing" id="u48-h2-POk"/>
+                <constraint firstItem="Tke-gv-reR" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Eok-xU-aQL"/>
+                <constraint firstItem="Tke-gv-reR" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="jaB-Xs-iox"/>
+                <constraint firstAttribute="bottom" secondItem="Tke-gv-reR" secondAttribute="bottom" id="niy-Os-DQn"/>
+                <constraint firstAttribute="trailing" secondItem="Tke-gv-reR" secondAttribute="trailing" id="wb7-84-Yy5"/>
             </constraints>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <variation key="default">
                 <mask key="subviews">
-                    <exclude reference="DCG-hh-8Cc"/>
+                    <exclude reference="Tke-gv-reR"/>
                 </mask>
                 <mask key="constraints">
-                    <exclude reference="NGe-k9-reY"/>
-                    <exclude reference="aIx-ja-K8g"/>
-                    <exclude reference="pDC-u7-nXr"/>
-                    <exclude reference="u48-h2-POk"/>
+                    <exclude reference="Eok-xU-aQL"/>
+                    <exclude reference="jaB-Xs-iox"/>
+                    <exclude reference="niy-Os-DQn"/>
+                    <exclude reference="wb7-84-Yy5"/>
                 </mask>
             </variation>
             <variation key="heightClass=regular-widthClass=compact">
                 <mask key="subviews">
-                    <include reference="DCG-hh-8Cc"/>
+                    <include reference="Tke-gv-reR"/>
                 </mask>
                 <mask key="constraints">
-                    <include reference="NGe-k9-reY"/>
-                    <include reference="aIx-ja-K8g"/>
-                    <include reference="pDC-u7-nXr"/>
-                    <include reference="u48-h2-POk"/>
+                    <include reference="Eok-xU-aQL"/>
+                    <include reference="jaB-Xs-iox"/>
+                    <include reference="niy-Os-DQn"/>
+                    <include reference="wb7-84-Yy5"/>
                 </mask>
             </variation>
+            <point key="canvasLocation" x="658" y="-453.5"/>
         </view>
     </objects>
 </document>
