--- a/FoodPiper/FilterView.xib
+++ b/FoodPiper/FilterView.xib
@@ -2,13 +2,14 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FilterViewController" customModule="FoodPiper" customModuleProvider="target">
             <connections>
-                <outlet property="categoryCollapsedView" destination="dPZ-7i-Cup" id="1QN-g4-cRr"/>
-                <outlet property="categoryHeightConstraint" destination="mrO-HE-29l" id="AzA-Ui-Fex"/>
+                <outlet property="availabilityExpansionView" destination="co8-0L-Uyj" id="g6i-rk-IvN"/>
+                <outlet property="categoryExpansionView" destination="dPZ-7i-Cup" id="I7i-so-mPd"/>
                 <outlet property="pricingSegmentControl" destination="Nbm-AP-dL8" id="v3f-P6-6KG"/>
                 <outlet property="view" destination="iN0-l3-epB" id="ksi-Az-Q0G"/>
             </connections>
@@ -21,7 +22,98 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tke-gv-reR">
                     <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                     <subviews>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dPZ-7i-Cup">
+                        <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bordered" translatesAutoresizingMaskIntoConstraints="NO" id="Nbm-AP-dL8">
+                            <rect key="frame" x="-60" y="-14" width="121" height="29"/>
+                            <segments>
+                                <segment title="$"/>
+                                <segment title="$$"/>
+                                <segment title="$$$"/>
+                                <segment title="$$$$"/>
+                            </segments>
+                            <connections>
+                                <action selector="pricingSelected:" destination="-1" eventType="valueChanged" id="Q1l-2J-W5c"/>
+                            </connections>
+                        </segmentedControl>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="co8-0L-Uyj" customClass="ExpansionView" customModule="FoodPiper" customModuleProvider="target">
+                            <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Availability" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U9I-he-c0G">
+                                    <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="71" id="6tX-IR-YuH">
+                                            <variation key="heightClass=regular-widthClass=compact" constant="100"/>
+                                        </constraint>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <nil key="highlightedColor"/>
+                                    <variation key="default">
+                                        <mask key="constraints">
+                                            <exclude reference="6tX-IR-YuH"/>
+                                        </mask>
+                                    </variation>
+                                    <variation key="heightClass=regular-widthClass=compact">
+                                        <mask key="constraints">
+                                            <include reference="6tX-IR-YuH"/>
+                                        </mask>
+                                    </variation>
+                                </label>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JXK-O8-D3p">
+                                    <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                    <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
+                                    <state key="normal" title="&gt;">
+                                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </state>
+                                    <connections>
+                                        <action selector="expandCollapseExpansionViewButtonPressed:" destination="-1" eventType="touchUpInside" id="WwF-wO-4Rr"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                            <color key="backgroundColor" red="0.12549019610000001" green="0.53725490200000003" blue="0.63921568630000003" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstItem="JXK-O8-D3p" firstAttribute="centerY" secondItem="co8-0L-Uyj" secondAttribute="centerY" id="2Pu-cU-ZUj"/>
+                                <constraint firstItem="JXK-O8-D3p" firstAttribute="top" secondItem="co8-0L-Uyj" secondAttribute="top" constant="10" id="YCL-Rc-htH"/>
+                                <constraint firstAttribute="trailing" secondItem="JXK-O8-D3p" secondAttribute="trailing" constant="16" id="cdv-W5-49Z"/>
+                                <constraint firstItem="U9I-he-c0G" firstAttribute="top" secondItem="co8-0L-Uyj" secondAttribute="top" constant="15" id="rW2-oI-r6y"/>
+                                <constraint firstItem="JXK-O8-D3p" firstAttribute="centerY" secondItem="U9I-he-c0G" secondAttribute="centerY" id="vr3-5u-uI3"/>
+                                <constraint firstAttribute="height" constant="51" id="wYn-JI-UtU"/>
+                                <constraint firstItem="U9I-he-c0G" firstAttribute="leading" secondItem="co8-0L-Uyj" secondAttribute="leadingMargin" id="yOl-BT-Kcy"/>
+                            </constraints>
+                            <variation key="default">
+                                <mask key="subviews">
+                                    <exclude reference="U9I-he-c0G"/>
+                                    <exclude reference="JXK-O8-D3p"/>
+                                </mask>
+                                <mask key="constraints">
+                                    <exclude reference="wYn-JI-UtU"/>
+                                    <exclude reference="2Pu-cU-ZUj"/>
+                                    <exclude reference="YCL-Rc-htH"/>
+                                    <exclude reference="cdv-W5-49Z"/>
+                                    <exclude reference="vr3-5u-uI3"/>
+                                    <exclude reference="rW2-oI-r6y"/>
+                                    <exclude reference="yOl-BT-Kcy"/>
+                                </mask>
+                            </variation>
+                            <variation key="heightClass=regular-widthClass=compact">
+                                <mask key="subviews">
+                                    <include reference="U9I-he-c0G"/>
+                                    <include reference="JXK-O8-D3p"/>
+                                </mask>
+                                <mask key="constraints">
+                                    <include reference="wYn-JI-UtU"/>
+                                    <exclude reference="2Pu-cU-ZUj"/>
+                                    <include reference="YCL-Rc-htH"/>
+                                    <include reference="cdv-W5-49Z"/>
+                                    <include reference="vr3-5u-uI3"/>
+                                    <include reference="rW2-oI-r6y"/>
+                                    <include reference="yOl-BT-Kcy"/>
+                                </mask>
+                            </variation>
+                            <connections>
+                                <outlet property="heightConstraint" destination="wYn-JI-UtU" id="O3G-Ox-C7T"/>
+                            </connections>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dPZ-7i-Cup" customClass="ExpansionView" customModule="FoodPiper" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7fA-wL-XwQ">
@@ -50,7 +142,7 @@
                                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     </state>
                                     <connections>
-                                        <action selector="filterCategoryPressed:" destination="-1" eventType="touchUpInside" id="g0M-Ck-FUd"/>
+                                        <action selector="expandCollapseExpansionViewButtonPressed:" destination="-1" eventType="touchUpInside" id="xN7-7b-ZmU"/>
                                     </connections>
                                 </button>
                             </subviews>
@@ -71,12 +163,12 @@
                                 </mask>
                                 <mask key="constraints">
                                     <exclude reference="mrO-HE-29l"/>
-                                    <exclude reference="eRC-CL-jek"/>
-                                    <exclude reference="tXD-ZY-322"/>
                                     <exclude reference="1TV-mc-DnS"/>
                                     <exclude reference="AkD-WR-kgV"/>
                                     <exclude reference="I4C-Ji-e4u"/>
                                     <exclude reference="iPP-k9-UmG"/>
+                                    <exclude reference="eRC-CL-jek"/>
+                                    <exclude reference="tXD-ZY-322"/>
                                 </mask>
                             </variation>
                             <variation key="heightClass=regular-widthClass=compact">
@@ -86,69 +178,71 @@
                                 </mask>
                                 <mask key="constraints">
                                     <include reference="mrO-HE-29l"/>
-                                    <include reference="eRC-CL-jek"/>
-                                    <include reference="tXD-ZY-322"/>
                                     <include reference="1TV-mc-DnS"/>
                                     <exclude reference="AkD-WR-kgV"/>
                                     <include reference="I4C-Ji-e4u"/>
                                     <include reference="iPP-k9-UmG"/>
+                                    <include reference="eRC-CL-jek"/>
+                                    <include reference="tXD-ZY-322"/>
                                 </mask>
                             </variation>
-                        </view>
-                        <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bordered" translatesAutoresizingMaskIntoConstraints="NO" id="Nbm-AP-dL8">
-                            <rect key="frame" x="-60" y="-14" width="121" height="29"/>
-                            <segments>
-                                <segment title="$"/>
-                                <segment title="$$"/>
-                                <segment title="$$$"/>
-                                <segment title="$$$$"/>
-                            </segments>
                             <connections>
-                                <action selector="pricingSelected:" destination="-1" eventType="valueChanged" id="Q1l-2J-W5c"/>
+                                <outlet property="heightConstraint" destination="mrO-HE-29l" id="PnR-cZ-qUN"/>
                             </connections>
-                        </segmentedControl>
+                        </view>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="400" id="20M-qS-qes"/>
+                        <constraint firstItem="co8-0L-Uyj" firstAttribute="leading" secondItem="Tke-gv-reR" secondAttribute="leading" id="6v8-B9-a3f"/>
                         <constraint firstAttribute="trailing" secondItem="Nbm-AP-dL8" secondAttribute="trailing" id="9No-cK-yV7"/>
                         <constraint firstItem="dPZ-7i-Cup" firstAttribute="top" secondItem="Tke-gv-reR" secondAttribute="top" constant="28" id="C8v-uu-bLU"/>
                         <constraint firstItem="Nbm-AP-dL8" firstAttribute="top" secondItem="dPZ-7i-Cup" secondAttribute="bottom" constant="26" id="FUH-m0-iwC"/>
                         <constraint firstItem="Nbm-AP-dL8" firstAttribute="leading" secondItem="Tke-gv-reR" secondAttribute="leading" id="HBf-XN-b98"/>
                         <constraint firstAttribute="trailing" secondItem="dPZ-7i-Cup" secondAttribute="trailing" id="J8w-ZV-oYa"/>
-                        <constraint firstAttribute="bottom" secondItem="Nbm-AP-dL8" secondAttribute="bottom" constant="61" id="xtB-4L-P0p"/>
+                        <constraint firstItem="co8-0L-Uyj" firstAttribute="top" secondItem="Nbm-AP-dL8" secondAttribute="bottom" constant="19" id="TyF-Rd-MjL"/>
+                        <constraint firstAttribute="trailing" secondItem="co8-0L-Uyj" secondAttribute="trailing" id="etz-LL-9i5"/>
+                        <constraint firstAttribute="bottom" secondItem="co8-0L-Uyj" secondAttribute="bottom" constant="22" id="nrc-1C-yqX"/>
                         <constraint firstItem="dPZ-7i-Cup" firstAttribute="leading" secondItem="Tke-gv-reR" secondAttribute="leading" id="zsv-Es-GOt"/>
                     </constraints>
                     <variation key="default">
                         <mask key="subviews">
-                            <exclude reference="dPZ-7i-Cup"/>
                             <exclude reference="Nbm-AP-dL8"/>
+                            <exclude reference="co8-0L-Uyj"/>
+                            <exclude reference="dPZ-7i-Cup"/>
                         </mask>
                         <mask key="constraints">
                             <exclude reference="20M-qS-qes"/>
-                            <exclude reference="C8v-uu-bLU"/>
-                            <exclude reference="J8w-ZV-oYa"/>
-                            <exclude reference="zsv-Es-GOt"/>
                             <exclude reference="9No-cK-yV7"/>
                             <exclude reference="FUH-m0-iwC"/>
                             <exclude reference="HBf-XN-b98"/>
-                            <exclude reference="xtB-4L-P0p"/>
+                            <exclude reference="6v8-B9-a3f"/>
+                            <exclude reference="TyF-Rd-MjL"/>
+                            <exclude reference="etz-LL-9i5"/>
+                            <exclude reference="nrc-1C-yqX"/>
+                            <exclude reference="C8v-uu-bLU"/>
+                            <exclude reference="J8w-ZV-oYa"/>
+                            <exclude reference="zsv-Es-GOt"/>
                         </mask>
                     </variation>
                     <variation key="heightClass=regular-widthClass=compact">
                         <mask key="subviews">
-                            <include reference="dPZ-7i-Cup"/>
                             <include reference="Nbm-AP-dL8"/>
+                            <include reference="co8-0L-Uyj"/>
+                            <include reference="dPZ-7i-Cup"/>
                         </mask>
                         <mask key="constraints">
                             <include reference="20M-qS-qes"/>
-                            <include reference="C8v-uu-bLU"/>
-                            <include reference="J8w-ZV-oYa"/>
-                            <include reference="zsv-Es-GOt"/>
                             <include reference="9No-cK-yV7"/>
                             <include reference="FUH-m0-iwC"/>
                             <include reference="HBf-XN-b98"/>
-                            <include reference="xtB-4L-P0p"/>
+                            <include reference="6v8-B9-a3f"/>
+                            <include reference="TyF-Rd-MjL"/>
+                            <include reference="etz-LL-9i5"/>
+                            <include reference="nrc-1C-yqX"/>
+                            <include reference="C8v-uu-bLU"/>
+                            <include reference="J8w-ZV-oYa"/>
+                            <include reference="zsv-Es-GOt"/>
                         </mask>
                     </variation>
                 </view>
@@ -183,7 +277,7 @@
                     <include reference="wb7-84-Yy5"/>
                 </mask>
             </variation>
-            <point key="canvasLocation" x="658" y="-406"/>
+            <point key="canvasLocation" x="558" y="-593.5"/>
         </view>
     </objects>
 </document>
